[gd_scene load_steps=11 format=3 uid="uid://cqlrhrg6x76ql"]

[ext_resource type="Script" path="res://Scenes/Effects/shot.gd" id="1_5l87p"]
[ext_resource type="Texture2D" uid="uid://c4njjlnmm8y1q" path="res://Art/Effects/BasicShot.png" id="2_k0reg"]
[ext_resource type="Script" path="res://Scenes/Misc/effect_audio_player.gd" id="3_ehu3n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8no8"]
size = Vector2(8, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_svrs1"]
atlas = ExtResource("2_k0reg")
region = Rect2(0, 0, 10, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgbp4"]
atlas = ExtResource("2_k0reg")
region = Rect2(10, 0, 10, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4qad"]
atlas = ExtResource("2_k0reg")
region = Rect2(20, 0, 10, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcotc"]
atlas = ExtResource("2_k0reg")
region = Rect2(30, 0, 10, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfnlc"]
atlas = ExtResource("2_k0reg")
region = Rect2(40, 0, 10, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_vqu2g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_svrs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgbp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4qad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcotc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfnlc")
}],
"loop": true,
"name": &"basic_shot",
"speed": 12.0
}]

[node name="Shot" type="Area2D" groups=["PlayerProjectiles"]]
collision_layer = 2
collision_mask = 20
script = ExtResource("1_5l87p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_y8no8")

[node name="Sprites" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_vqu2g")
animation = &"basic_shot"
autoplay = "basic_shot"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true
autostart = true

[node name="SFXPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -14.991
script = ExtResource("3_ehu3n")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="SFXPlayer" to="." method="_on_sfx_player_finished"]
